--- a/SLEGO_LITE.ipynb
+++ b/SLEGO_LITE.ipynb
@@ -35,6 +35,9 @@
         "from google.colab import files\n",
         "import os\n",
         "\n",
+        "#mount\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
         "# Path to the directory where the repository is or will be cloned\n",
         "path = '/content/drive/MyDrive/SLEGO'\n",
         "\n",
@@ -61,20 +64,24 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 138
         },
         "id": "00oryuRBCYks",
-        "outputId": "e9630318-bfc9-46b9-a1ca-365d08d6f7fd"
+        "outputId": "e7560456-4575-4577-ba5c-0ae8675b1951"
       },
-      "execution_count": 54,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content/drive/MyDrive/SLEGO\n",
-            "Already up to date.\n",
-            "Updated the existing repository.\n"
+            "Cloning into '/content/drive/MyDrive/SLEGO'...\n",
+            "remote: Enumerating objects: 68, done.\u001b[K\n",
+            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (66/66), done.\u001b[K\n",
+            "remote: Total 68 (delta 29), reused 1 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (68/68), 1.18 MiB | 10.88 MiB/s, done.\n",
+            "Resolving deltas: 100% (29/29), done.\n"
           ]
         },
         {
@@ -108,7 +115,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "YWWiwb3VweCa"
       },
@@ -137,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "3PYMvKS9izZF",
         "colab": {
@@ -1064,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": null,
       "metadata": {
         "id": "D8V14WaV0ni_",
         "colab": {
@@ -1645,7 +1652,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": null,
       "metadata": {
         "id": "TMxVW2sAdrk_"
       },
@@ -1786,7 +1793,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": null,
       "metadata": {
         "id": "G6zKO1xFOx1K",
         "colab": {
@@ -2318,7 +2325,7 @@
       "metadata": {
         "id": "v8lN3M_qEFjq"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": []
     }
   ],
