--- a/SLEGO_LITE.ipynb
+++ b/SLEGO_LITE.ipynb
@@ -35,9 +35,6 @@
         "from google.colab import files\n",
         "import os\n",
         "\n",
-        "#mount\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
         "# Path to the directory where the repository is or will be cloned\n",
         "path = '/content/drive/MyDrive/SLEGO'\n",
         "\n",
@@ -64,24 +61,20 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 138
+          "height": 69
         },
         "id": "00oryuRBCYks",
-        "outputId": "e7560456-4575-4577-ba5c-0ae8675b1951"
+        "outputId": "e9630318-bfc9-46b9-a1ca-365d08d6f7fd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cloning into '/content/drive/MyDrive/SLEGO'...\n",
-            "remote: Enumerating objects: 68, done.\u001b[K\n",
-            "remote: Counting objects: 100% (68/68), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (66/66), done.\u001b[K\n",
-            "remote: Total 68 (delta 29), reused 1 (delta 0), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (68/68), 1.18 MiB | 10.88 MiB/s, done.\n",
-            "Resolving deltas: 100% (29/29), done.\n"
+            "/content/drive/MyDrive/SLEGO\n",
+            "Already up to date.\n",
+            "Updated the existing repository.\n"
           ]
         },
         {
@@ -1728,7 +1721,7 @@
         "\n",
         "\n",
         "def compute_btn_clicked(event):\n",
-        "\n",
+        "    input_text_change(None)\n",
         "    output_text.value = ''\n",
         "    # Get the text from the text_input\n",
         "    text = input_text.value\n",
