--- a/SLEGO_LITE.ipynb
+++ b/SLEGO_LITE.ipynb
@@ -167,21 +167,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 18,
       "metadata": {
         "id": "YWWiwb3VweCa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f8b80952-8845-4a05-fc14-85a9cb20ee0c"
+        "outputId": "222263ef-6344-4d01-be34-a845fdf4ac12"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 3.33 ms, sys: 0 ns, total: 3.33 ms\n",
-            "Wall time: 3.03 ms\n"
+            "CPU times: user 4.32 ms, sys: 44 µs, total: 4.37 ms\n",
+            "Wall time: 3.98 ms\n"
           ]
         }
       ],
@@ -191,20 +191,21 @@
         "# !pip install -r /content/drive/MyDrive/SLEGO/requirements.txt\n",
         "\n",
         "# uncomment below codes if you want to save these dependencies on google drive and reuse it next time, Path to the directory on Google Drive where the dependencies are stored\n",
-        "dependencies_dir = \"/content/drive/MyDrive/SLEGO_dependencies\"\n",
+        "dependencies_dir = \"/content/drive/MyDrive/SLEGO_dependencies_v0_0_1\"\n",
         "requirements_file = \"/content/drive/MyDrive/SLEGO/requirements.txt\"\n",
         "\n",
         "\n",
         "# # Uncomment below if you wanna save the python dependencies on your google drive, once you have saved it, you can comment this again to avoid reinstallation\n",
         "\n",
-        "# if not os.path.exists(dependencies_dir):\n",
-        "#     # Install dependencies if the directory does not exist\n",
-        "#     print(\"Installing dependencies...\")\n",
-        "#     !pip install --target=\"$dependencies_dir\" -r $requirements_file\n",
-        "# else:\n",
-        "#     # If the directory exists, you might want to update or ensure all packages are installed\n",
-        "#     print(\"Updating/installing packages...\")\n",
-        "#     !pip install --target=\"$dependencies_dir\" -r $requirements_file\n",
+        "if not os.path.exists(dependencies_dir):\n",
+        "    # Install dependencies if the directory does not exist\n",
+        "    print(\"Installing dependencies...\")\n",
+        "    !pip install --target=\"$dependencies_dir\" -r $requirements_file\n",
+        "else:\n",
+        "    # If the directory exists, you might want to update or ensure all packages are installed\n",
+        "    pass\n",
+        "    # print(\"Updating/installing packages...\")\n",
+        "    # !pip install --target=\"$dependencies_dir\" -r $requirements_file\n",
         "\n",
         "# Append the directory to sys.path\n",
         "if dependencies_dir not in sys.path:\n",
