--- a/SLEGO.ipynb
+++ b/SLEGO.ipynb
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [
         {
@@ -64,7 +64,6 @@
           "output_type": "stream",
           "text": [
             "Running in GitHub Codespaces environment.\n",
-            "Created requirements.txt at /workspaces/SELGO-Project/requirements.txt\n",
             "Requirement already satisfied: panel in /home/codespace/.local/lib/python3.10/site-packages (from -r /workspaces/SELGO-Project/requirements.txt (line 1)) (1.4.4)\n",
             "Requirement already satisfied: numpy in /home/codespace/.local/lib/python3.10/site-packages (from -r /workspaces/SELGO-Project/requirements.txt (line 2)) (1.23.5)\n",
             "Requirement already satisfied: pandas in /home/codespace/.local/lib/python3.10/site-packages (from -r /workspaces/SELGO-Project/requirements.txt (line 3)) (2.2.2)\n",
@@ -250,7 +249,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "os.chdir(config['folder_path'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'drive_mainfolder': '/workspaces/SELGO-Project',\n",
+              " 'drive_folder': '/workspaces/',\n",
+              " 'repo_url': 'https://github.com/alanntl/SELGO-Project.git',\n",
+              " 'slego_env': '/workspaces//slego_env_v0_0_1',\n",
+              " 'requirements_file': '/workspaces/SELGO-Project/requirements.txt',\n",
+              " 'folder_path': '/workspaces/SELGO-Project/slegospace',\n",
+              " 'dataspace': '/workspaces/SELGO-Project/slegospace/dataspace',\n",
+              " 'recordspace': '/workspaces/SELGO-Project/slegospace/recordspace',\n",
+              " 'functionspace': '/workspaces/SELGO-Project/slegospace/functionspace',\n",
+              " 'knowledgespace': '/workspaces/SELGO-Project/slegospace/knowledgespace'}"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "config"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -260,7 +297,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[15], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mslegoapp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpanel\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpn\u001b[39;00m\n\u001b[1;32m      3\u001b[0m display(config)\n",
+            "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mslegoapp\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpanel\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpn\u001b[39;00m\n\u001b[1;32m      3\u001b[0m display(config)\n",
             "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'slegoapp'"
           ]
         }
